# MetaForge

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  docker-compose.observability.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: dashboard-tester.agent.md  uat-validator.agent.md
.claude/commands/: test-dashboard.md  uat-cycle12.md
.claude/test-scenarios/: README.md  cad-generation.scenario.md  full-validation.scenario.md  mechanical-stress.scenario.md  smoke-navigation.scenario.md
.github/workflows/: ci.yml
api_gateway/: CLAUDE.md  __init__.py  health.py  server.py
api_gateway/assistant/: __init__.py  approval.py  routes.py  schemas.py
api_gateway/chat/: __init__.py  activity.py  agent_router.py  models.py  routes.py  schema.sql  streaming.py
api_gateway/compliance/: routes.py
api_gateway/convert/: routes.py  schemas.py  service.py
api_gateway/db/: __init__.py  engine.py  models.py  repository.py
api_gateway/knowledge/: __init__.py  routes.py
api_gateway/projects/: routes.py
api_gateway/sessions/: routes.py
api_gateway/twin/: file_link.py  file_watcher.py  import_schemas.py  import_service.py  routes.py  schemas.py  version_schemas.py  version_service.py
cli/: __init__.py
cli/forge_cli/: __init__.py  client.py  formatters.py  ingest.py  main.py
dashboard/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts  vitest.config.ts
dashboard/e2e/: layout.spec.ts  navigation.spec.ts  pages.spec.ts
dashboard/src/: App.tsx  index.css  main.tsx
digital_twin/: CLAUDE.md  __init__.py
digital_twin/assistant/: __init__.py  reconciler.py  watcher.py
digital_twin/context/: __init__.py  assembler.py  conflicts.py  models.py  quote_capture.py  retrieval_evaluator.py  retrieval_metrics.py  role_scope.py
digital_twin/knowledge/: __init__.py  chunker.py  consumer.py  embedding_service.py  lightrag_service.py  models.py  service.py  store.py  templates.py  types.py
docs/: architecture.md  governance.md  mcp_spec.md  roadmap.md  skill_spec.md  testing-strategy.md  twin_schema.md
docs/agents/: electronics-context-spec.md  mechanical-context-spec.md
docs/architecture/: context-engineering.md  knowledge-ingestion-playbook.md  neo4j-migration.md
docs/implementation/: NEXT_STEPS_CONSTRAINTS.md  twin_phase1_plan.md
docs/integrations/: claude-code.md  codex.md  lightrag-ui.md  mcp-config-examples.md
docs/runbooks/: device-telemetry-stopped.md  fleet-anomaly-pattern.md  gateway-down.md  kafka-consumer-stopped.md  neo4j-unreachable.md
docs/uat/: cycle-1-2-acceptance-matrix.md  uat-claude-driven-report-2026-04-27.md  uat-claude-driven-tier2-observability-report-2026-04-27.md  uat-claude-driven-tier2-observability-rerun-2026-04-28.md  uat-report-2026-04-27.md
domain_agents/: CLAUDE.md  base_agent.py
domain_agents/compliance/: agent.py  checklist_generator.py  models.py
domain_agents/electronics/: __init__.py  agent.py  pydantic_ai_agent.py
domain_agents/firmware/: agent.py  pydantic_ai_agent.py
domain_agents/mechanical/: agent.py  pydantic_ai_agent.py  workflows.py  writeback.py
domain_agents/shared/: __init__.py
domain_agents/simulation/: agent.py  pydantic_ai_agent.py
domain_agents/supply_chain/: agent.py  alt_parts.py  models.py  risk_scorer.py
examples/drone_flight_controller/: README.md  demo_full_pipeline.py  demo_validate_stress.py
ide_assistants/kicad_plugin/: __init__.py  chat_widget.py  context_resolver.py  metadata.json  plugin.py  types.py  ws_client.py
ide_assistants/vscode_extension/: package.json  tsconfig.json
mcp_core/: CLAUDE.md  __init__.py  auth.py  client.py  context.py  errors.py  protocol.py  resources.py  schemas.py  transports.py
metaforge/mcp/: __main__.py  server.py
observability/: CLAUDE.md  __init__.py  alloy-config.alloy  bootstrap.py  config.py  cost_attribution.py  grafana-dashboards.yml  logging.py  metrics.py  middleware.py  otel-collector-config.yaml  prometheus.yml  propagation.py  simulation_metrics.py  tempo.yaml  tenant_isolation.py  trace_enrichment.py  tracing.py
observability/alerting/: __init__.py  routes.yaml  rules.yaml
observability/audit/: __init__.py  integrity.py  logger.py  models.py
observability/dashboards/: agent-performance.json  cost-attribution.json  data-stores.json  fleet-health.json  slo-overview.json  system-overview.json  tenant-variables.json
observability/runbooks/: README.md  device_telemetry_stopped.md  fleet_anomaly_pattern.md  gateway_down.md  kafka_consumer_stopped.md  neo4j_unreachable.md
observability/slo/: definitions.py
orchestrator/: CLAUDE.md  __init__.py  dependency_engine.py  iteration_controller.py  scheduler.py  temporal_worker.py  workflow_dag.py
orchestrator/activities/: __init__.py  base_activity.py  (+4 more)
scripts/: run_tier0_validator_surrogate.py  run_tier1_knowledge_validator_surrogate.py  run_tier2_observability_validator_surrogate.py  spike_lightrag.py
shared/: __init__.py  storage.py
skill_registry/: CLAUDE.md  __init__.py  bridge_factory.py  loader.py  mcp_bridge.py  mcp_client_bridge.py  registry.py  schema_validator.py  skill_base.py
tests/: conftest.py  create_sample_data.py  test_twin_basic.py
tool_registry/: CLAUDE.md  __init__.py  bootstrap.py  container_runtime.py  execution_engine.py  registry.py  tool_metadata.py
twin_core/: CLAUDE.md  README.md  __init__.py  api.py  config.py  exceptions.py  graph_engine.py  init_schema.py  neo4j_graph_engine.py
(+414 files in other folders)
